Исправлен стиль SubtaskHandler для прохождения Checkstyle